--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         classpath deps.kotlin.plugin_serialization
         classpath deps.apollo.plugin
         classpath deps.navigation.safe_args_plugin
+        classpath 'com.novoda:bintray-release:0.9.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
