--- a/settings.gradle
+++ b/settings.gradle
@@ -2,8 +2,7 @@
 include ':baselib:github_base',
         ':baselib:res',
         ':baselib:prettifier',
-        ':gittestsuper',
-        ':recurve'
+        ':gittestsuper'
 
 //app
 include ':app'
@@ -13,30 +12,5 @@ include ':modules:oauth2',
         ':modules:repository',
         ':modules:profile'
 
-
-//recurve支持库
-include 'recurve-retrofit2-support',
-        'recurve-apollo-support',
-        'recurve-dagger2-support',
-        'recurve-module-adapter',
-        'recurve-module-paging-support',
-        'recurve-glide-support',
-        'viewpager2-navigation-ktx',
-        'bottom-navigation-ktx',
-        'viewpager2-tablayout-ktx',
-        'navigation-dialog'
-
-
-project(":recurve").projectDir = file("../MvvmRecurve/recurve")
-project(":recurve-retrofit2-support").projectDir = file("../MvvmRecurve/recurve-retrofit2-support")
-project(":recurve-apollo-support").projectDir = file("../MvvmRecurve/recurve-apollo-support")
-project(":recurve-dagger2-support").projectDir = file("../MvvmRecurve/recurve-dagger2-support")
-project(":recurve-module-adapter").projectDir = file("../MvvmRecurve/recurve-module-adapter")
-project(":recurve-module-paging-support").projectDir = file("../MvvmRecurve/recurve-module-paging-support")
-project(":recurve-glide-support").projectDir = file("../MvvmRecurve/recurve-glide-support")
-project(":viewpager2-navigation-ktx").projectDir = file("../MvvmRecurve/viewpager2-navigation-ktx")
-project(":viewpager2-tablayout-ktx").projectDir = file("../MvvmRecurve/viewpager2-tablayout-ktx")
-project(":bottom-navigation-ktx").projectDir = file("../MvvmRecurve/bottom-navigation-ktx")
-project(":navigation-dialog").projectDir = file("../MvvmRecurve/navigation-dialog")
 include ':baselib:prettifier'
 include ':baselib:pager'
