--- a/versions.gradle
+++ b/versions.gradle
@@ -7,6 +7,7 @@ ext.deps = [:]
 def deps = [:]
 
 def versions = [:]
+versions.recurve = "1.0.0-alpha01"
 versions.arch_core = "2.0.0-alpha1"
 versions.lifecycle = "2.0.0"
 versions.paging = "2.1.0"
@@ -45,7 +46,7 @@ versions.navigation = "2.1.0-rc01"
 versions.app_code = 1
 versions.app_name = "1.0"
 versions.databinding_compiler = "3.3.2"
-versions.apollo = "1.0.1"
+versions.apollo = "1.2.1"
 versions.apollo_converter = "0.1.0"
 versions.arouter_api = "1.5.0"
 versions.arouter_compiler = "1.2.2"
@@ -57,6 +58,20 @@ versions.arrow = "0.10.0-SNAPSHOT"
 versions.calces_screen = "1.3.4-alpha01"
 versions.calces_component = "3.3.0-alpha01"
 deps.versions = versions
+
+def recurve = [:]
+recurve.core = "com.recurve:recurve.core:$versions.recurve"
+recurve.retrofit2 = "com.recurve:recurve-retrofit2-support:$versions.recurve"
+recurve.apollo = "com.recurve:recurve-apollo-support:$versions.recurve"
+recurve.dagger2 = "com.recurve:recurve-dagger2-support:$versions.recurve"
+recurve.module_adapter = "com.recurve:recurve-module-adapter:$versions.recurve"
+recurve.paging = "com.recurve:recurve-module-paging-support:$versions.recurve"
+recurve.glide = "com.recurve:recurve-glide-support:$versions.recurve"
+recurve.viewpager2_navigation = "com.recurve:viewpager2-navigation-ktx:$versions.recurve"
+recurve.bottom_navigation = "com.recurve:bottom-navigation-ktx:$versions.recurve"
+recurve.viewpager2_tablayout = "com.recurve:viewpager2-tablayout-ktx:$versions.recurve"
+recurve.navigation_dialog = "com.recurve:navigation-dialog:$versions.recurve"
+deps.recurve = recurve
 
 def androidx = [:]
 androidx.appcompat = "androidx.appcompat:appcompat:$versions.androidx"
